mw/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: prometheus-cluster
    # app.kubernetes.io/name: minio
  name: prometheus-cluster-console
spec:
  ingressClassName: public
  rules:
  - host: console.prometheus.local
    http:
      paths:
      - backend:
          service:
            name: prometheus-operated
            port:
              name: web
        path: /
        pathType: ImplementationSpecific
